[gd_scene load_steps=5 format=2]

[ext_resource path="res://PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/Fonts/IMMORTAL.ttf" type="FontFile" id=2]

[sub_resource type="FontFile" id=1]
font_data = ExtResource( 2 )

[sub_resource type="FontFile" id=2]
size = 10
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Control"]
process_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.615686, 0.129412, 0.129412, 0.219608 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
offset_left = 109.0
offset_top = 40.0
offset_right = 191.0
offset_bottom = 139.0
custom_constants/separation = 6

[node name="Paused" type="Label" parent="CenterContainer/VBoxContainer"]
offset_right = 82.0
offset_bottom = 21.0
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1

[node name="MusicMuteButton" type="Button" parent="CenterContainer/VBoxContainer"]
offset_top = 27.0
offset_right = 82.0
offset_bottom = 47.0
tooltip_text = "Toggle Music On and Off"
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "Music: On"

[node name="ResumeGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
offset_top = 53.0
offset_right = 82.0
offset_bottom = 73.0
custom_fonts/font = SubResource( 2 )
text = "Resume Game"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
offset_top = 79.0
offset_right = 82.0
offset_bottom = 99.0
custom_fonts/font = SubResource( 2 )
text = "Quit"

[connection signal="toggled" from="CenterContainer/VBoxContainer/MusicMuteButton" to="." method="_on_Music_Button_toggled"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeGameButton" to="." method="_on_ResumeGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
